Adding shadow to footer

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,5 @@
 <!--start add by neha-->
-<footer>
+<footer class="lf-card">
     <div class="rowLayout" style="justify-content: space-between">
         <div>&copy; Copyright 2017</div>
         <div class="lf-text-grey" style="padding:0px 0px;">
