add link to neighbourhood name for temporary test

--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/jquery.canvasjs.min.js"></script>
+    <script type="text/javascript" src="../js/neighborDetail.js"></script>
     <!-- Header Footer Load Script -->
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
 </head>
@@ -31,9 +32,9 @@
             </div>
             <div id="suggestionNames">
                 <ul>
-                    <li>Queen Anne</li>
-                    <li>Capitol Hill</li>
-                    <li>Downtown</li>
+                    <li><a class="neighborDetail" href="neighborDetail.html?name=Queen Anne">Queen Anne</a></li>
+                    <li><a class="neighborDetail" href="neighborDetail.html?name=Capitol Hill">Capitol Hill</li>
+                    <li><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Downtown</li>
                 </ul>
             </div>
             <div id='suggestedArea' class="mobileLayout desktopLayout">
