--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -11,9 +11,11 @@
       <link rel="stylesheet" type="text/css" href="../css/layout.css" />
       <link rel="stylesheet" type="text/css" href="../css/brand.css" />
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- my custom css file -->
       <link rel="stylesheet" type="text/css" href="../css/compareNeighborhoods.css">
-      <script src="js/less.js" type="text/javascript"></script>
+      <!-- <script src="js/less.js" type="text/javascript"></script> -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
       <!-- Header Footer Load Script -->
       <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
@@ -21,11 +23,10 @@
   <body>
   <div id='header'></div>
   <div id="mainDiv">
-      <h1>Let's Compare</h1>
-      <h3>Enter the neighborhoods you like to compare</h3>
+      <h1>Enter the neighborhoods you like to compare</h1>
       <div class="compareContainer">
           <!-- left section -->
-          <section class="comparison" id="leftNeighborhood">
+          <section class="comparison">
               <img src="../image/downtown.jpg" alt="">
               <input type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods1">
@@ -40,11 +41,11 @@
                   <option value="Alki">
               </datalist>
           </section>
-          <section id="vsSection">
+          <!-- <section id="vsSection">
               <h1>VS</h1>
-          </section>
+          </section> -->
           <!-- Right section -->
-          <section class="comparison" id="rightNeighborhood">
+          <section class="comparison">
               <img src="../image/uwbothell.jpg" alt="">
               <input type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods2">
@@ -60,9 +61,12 @@
               </datalist>
           </section>
       </div>
-      <!--since the common button css has margin-top of 14. I am not able to place where i wanted-->
-      <button>Compare</button>
+      <div class="text-center">
+        <a href=""><button class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large lf-margin-top">Compare</button></a>
+      </div>
+
   </div>
+  <div id='footer'></div>
   </body>
 </html>
 <!--end by sirisha-->
