some change for map.html

--- a/html/map.html
+++ b/html/map.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>map</title>
-    <link rel="stylesheet" type="text/css" href="map.css">
+    <link rel="stylesheet" type="text/css" href="../css/map.css">
    
 </head>
 
@@ -51,7 +51,7 @@
  
     <section class="mapPage">
 	<div class="mapDiv">
-	<img src="map.jpg" alt="SeattleMap" usemap="#imagemap1" height="600" width="600">    
+	<img src="../image/map.jpg" alt="SeattleMap" usemap="#imagemap1" height="600" width="600">    
     <map id="imagemap1" name="imagemap1">
     <area shape="rect" alt="Northgate" coords="330,100,430,190" class="neighborDetail" href="neighborDetail.html?name=Northgate" />
     <area shape="rect" alt="U-District" coords="310,230,413,280" class="neighborDetail" href="neighborDetail.html?name=University District" />
@@ -67,17 +67,17 @@
     </div>    
     
     <div class="mapTextDivRight1">
-    <h1 class="mapTextTitle"><img src="pin.png" alt="pin" width="38" height="43" align="middle"> CHOOSE AN AREA</h1>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Northgate">Northgate</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Green Lake">Green Lake</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Ballard">Ballard</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Fremont">Fremont</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=University District">U-District</a></h3>   
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Queen Anne">Queen Anne</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Downtown">Downtown</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=Alki">Alki</a></h3>
-    <h3 class="mapText"><a class="mapLink" class="neighborDetail" href="neighborDetail.html?name=South Lake Union">South Lake Union</a></h3>
+    <h1 class="mapTextTitle"><img src="../image/pin.png" alt="pin" width="38" height="43" align="middle"> CHOOSE AN AREA</h1>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Northgate">Northgate</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Green Lake">Green Lake</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Ballard">Ballard</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Fremont">Fremont</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=University District">U-District</a></h3>   
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Queen Anne">Queen Anne</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Downtown</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Alki">Alki</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">South Lake Union</a></h3>
     </div>
     
     <div class="mapTextDivRight2">
