change less to css

--- a/html/neighborDetail.html
+++ b/html/neighborDetail.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
 
-    <link rel="stylesheet/less" type="text/css" href="../less/neighborDetail.less" />
+<!--     <link rel="stylesheet/less" type="text/css" href="../less/neighborDetail.less" /> -->
 
-    <!-- <link rel="stylesheet" type="text/css" href="../css/neighborDetail.css" /> -->
+    <link rel="stylesheet" type="text/css" href="../css/neighborDetail.css" />
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
