--- a/html/header.html
+++ b/html/header.html
@@ -23,10 +23,10 @@
 
         <div id="down-content-desktop" class="rowLayout">
            
-            <a href="/html/NA.html" class="lf-button header-link position-right lf-margin-top-xl">
+            <a href="/html/CompareNeighborhoods.html" class="lf-button header-link position-right lf-margin-top-xl">
                 <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
             </a>
-            <a href="/html/CompareNeighborhoods.html" class="lf-button header-link position-right lf-margin-top-xl">
+            <a href="" class="lf-button header-link position-right lf-margin-top-xl">
                 <i class="fa fa-search lf-hover-opacity "></i>FIND
             </a>
             <a href="/html/slider.html" class="lf-button header-link position-right lf-margin-top-xl" >
