--- a/html/header.html
+++ b/html/header.html
@@ -26,7 +26,7 @@
             <a href="/html/CompareNeighborhoods.html" class="lf-button header-link position-right lf-margin-top-xl">
                 <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
             </a>
-            <a href="" class="lf-button header-link position-right lf-margin-top-xl">
+            <a href="/html/NA.html" class="lf-button header-link position-right lf-margin-top-xl">
                 <i class="fa fa-search lf-hover-opacity "></i>FIND
             </a>
             <a href="/html/slider.html" class="lf-button header-link position-right lf-margin-top-xl" >
