import suggestRefer.js and criterion.js

--- a/html/neighborDetail.html
+++ b/html/neighborDetail.html
@@ -21,6 +21,8 @@
     <script src="../js/less.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
+    <script type="text/javascript" src="../js/suggestRefer.js"></script>
+    <script type="text/javascript" src="../js/criterion.js"></script>
     <script type="text/javascript" src="../js/neighborDetail.js"></script>
 </head>
 <body>
