add counter div

--- a/html/slider.html
+++ b/html/slider.html
@@ -20,7 +20,7 @@
   <div class = "questionnaire">
   <div class = "onlyQuestionnaire">
  <p>Please answer the following questions to be able to view the neighborhoods we suggest. </p>
-
+  <div class="counter"></div>
   <div class="questionSlider">
    
       <div class="slider">
