add id to image and input

--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -27,8 +27,8 @@
       <div class="compareContainer">
           <!-- left section -->
           <section class="comparison">
-              <img src="../image/downtown.jpg" alt="">
-              <input type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood">
+              <img id="leftImg" src="../image/downtown.jpg" alt="">
+              <input id="leftInput" type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods1">
                   <option value="University District">
                   <option value="Queen Anne">
@@ -46,8 +46,8 @@
           </section> -->
           <!-- Right section -->
           <section class="comparison">
-              <img src="../image/uwbothell.jpg" alt="">
-              <input type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood">
+              <img id='rightImg' src="../image/uwbothell.jpg" alt="">
+              <input id="rightInput" type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods2">
                   <option value="University District">
                   <option value="Queen Anne">
