--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
             <br/>
             <span class="text-large">We care what matters to you</span>
-            <p><a href="" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
+            <p><a href="../html/slider.html" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
         </div>
     </div>
     
@@ -41,7 +41,7 @@
             <div class="lf-card-block">
                 <h4 class="lf-card-title">New to Seattle!</h4><br/>
                 <p class="lf-card-text">Welcome to Evergreen State. We would love to suggest top 3 areas which is best fit for you. </p><br/>
-                <div><button class="lf-button lf-red lf-opacity">START</button></div>
+                <div><a href="../html/slider.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
         </div>
 
@@ -50,7 +50,7 @@
             <div class="lf-card-block">
                 <h4 class="lf-card-title">Already know the neighborhood you like?</h4>
                 <p class="lf-card-text">That's awesome! Let us help you explore more on your choice of neighborhood.</p><br/>
-                <div><button class="lf-button lf-red lf-opacity">START</button></div>
+                <div><a href="../html/map.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
             <div class="lf-card-block">
                 <h4 class="lf-card-title">Would like to compare neighborhoods?</h4>
                 <p class="lf-card-text">Confused which one to choose. Compare with respect to each criteria and make the right choice.</p><br/>
-                <div><button class="lf-button lf-red lf-opacity">START</button></div>
+                <div><a href="../html/CompareNeighborhoods.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
         </div>
     </div>
