Changed the font style and picture in compare page

--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" type="text/css" href="../css/layout.css" />
       <link rel="stylesheet" type="text/css" href="../css/brand.css" />
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
+      <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- my custom css file -->
@@ -47,7 +48,7 @@
           </section> -->
           <!-- Right section -->
           <section class="comparison">
-              <img id='rightImg' src="../image/uwbothell.jpg" alt="">
+              <img id='rightImg' src="../image/century.jpg" alt="">
               <input id="rightInput" type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods2">
                   <option value="University District">
