--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" /> -->
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/loadHeaderFooter.js"></script>
 
@@ -34,7 +35,7 @@
             <p><a href="../html/slider.html" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
         </div>
     </div>
-    
+
    <div class="card-container desktopLayout">
         <div class="lf-card-2">
             <img src="./image/seattle.jpg" alt="Card image cap"/>
