--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" type="text/css" href="./css/brand.css" />
 
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
-
+    <link rel="shortcut icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/findNeighbor.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli&effect=shadow-multiple|3d-float" />
     <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" /> -->
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
@@ -20,7 +24,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./js/loadHeaderFooter.js"></script>
-
+    <script>document.documentElement.className = 'js';</script>
 </head>
 
 <body>
@@ -65,10 +69,11 @@
         </div>
     </div>
 
-
+    <div id='search'></div>
 
     <div id='footer'></div>
    <script type="text/javascript" src="./js/index.js"></script>
+   <script type="text/javascript" src="./js/findNeighbor.js"></script>
 </body>
 
 </html>
