add link to compare button

--- a/html/neighborDetail.html
+++ b/html/neighborDetail.html
@@ -99,9 +99,8 @@
     <!-- end of row -->
     <div class="footer">
       <!-- <div class="btn-group"> -->
-        <button class="button">Compare</button>
+        <button onclick="window.location.href='../html/CompareNeighborhoods.html" class="button">Compare</button>
         <button class="button">Favourite</button>
-        <button class="button">Back</button>
       <!-- </div> -->
     </div>
     <div id='footer'></div>
