--- a/html/slider.html
+++ b/html/slider.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questionaire</title>
-   
+
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./css/html-semantics.css" />
+    <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
-    <link rel="stylesheet" type="text/css" href="../css/layout.css" /> 
-    <link rel="stylesheet" href="../css/questionnaire.css"/>
+
+    <!-- <link rel="stylesheet" href="../css/questionnaire.css"/> -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+    <link rel="stylesheet" href="../css/sliderStyle.css"/>
      <!--<link rel="stylesheet/less" type="text/css" href="less/slider.less" />-->
     <!--<script src="js/less.js" type="text/javascript"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -19,18 +24,19 @@
   <div id='header'></div>
   <div class = "questionnaire">
   <div class = "onlyQuestionnaire">
- <p>Please answer the following questions to be able to view the neighborhoods we suggest. </p>
+     <h1>Answer the questions to view top 3 neighborhood suggestions.</h1>
+  </div>
   <div class="counter"></div>
   <div class="questionSlider">
-   
+
       <div class="slider">
         <h1>Which activity interests you the most?</h1>
         <section  id = "" class= "options">
           <!--Modified by rachel--><!-- Start Modified by neha-->
-          <button id = "q1o1" class= "q1 selector"   value="outdoor">Outdoor Activities</button>
-          <button id = "q1o2" class= "q1 selector" value="movies">Watching Movies</button>
-          <button id = "q1o3" class= "q1 selector" value="bar-hopping">Bar Hopping</button>
-          <button id = "q1o4" class= "q1 selector" value="foodie"> Trying Different Cuisines</button>
+          <button id = "q1o1"  class= "q1 selector"  value="outdoor">Outdoor Activities</button>
+          <button id = "q1o2"  class= "q1 selector" value="movies">Watching Movies</button>
+          <button id = "q1o3"  class= "q1 selector" value="bar-hopping">Bar Hopping</button>
+          <button id = "q1o4"  class= "q1 selector" value="foodie"> Trying Different Cuisines</button>
           <!--end-->
         </section>
       </div>
@@ -39,9 +45,9 @@
          <h1>Do you have kids?</h1>
          <section class= "options">
             <!--Modified by rachel-->
-           <button id = "q2o1" class= "q2 selector"  value="YES">YES</button>
-           <button id = "q2o2" class= "q2 selector" value="NO">NO </button>
-           <button id = "q2o3" class= "q2 selector" value="NA"> N/A </button>
+           <button id = "q2o1" class= "q2 selector" class="lf-button lf-red lf-opacity" value="YES">YES</button>
+           <button id = "q2o2" class= "q2 selector" class="lf-button lf-red lf-opacity" value="NO">NO </button>
+           <button id = "q2o3" class= "q2 selector" class="lf-button lf-red lf-opacity" value="NA"> N/A </button>
             <!--end-->
          </section>
       </div>
@@ -49,10 +55,10 @@
      <h1>Could you let us know your income? </h1>
      <section class= "options">
         <!--Modified by rachel-->
-       <button id = "q3o1" class= "q3 selector" value="10-30">10-30k</button>
-       <button id = "q3o2" class= "q3 selector" value="30-60">30-60k</button>
-       <button id = "q3o3" class= "q3 selector" value="60-90">60-90k</button>
-       <button id = "q3o4" class= "q3 selector" value="90+"> 90+k </button>
+       <button id = "q3o1" class= "q3 selector" class="lf-button lf-red lf-opacity" value="10-30">10-30k</button>
+       <button id = "q3o2" class= "q3 selector" class="lf-button lf-red lf-opacity" value="30-60">30-60k</button>
+       <button id = "q3o3" class= "q3 selector" class="lf-button lf-red lf-opacity" value="60-90">60-90k</button>
+       <button id = "q3o4" class= "q3 selector" class="lf-button lf-red lf-opacity" value="90+"> 90+k </button>
         <!--end-->
      </section>
     </div>
@@ -60,10 +66,10 @@
       <h1 id = "q4"> How often do you use public transportion?</h1>
       <section class= "options">
          <!--Modified by rachel-->
-         <button id = "q4o1" class= "q4 selector" value="DAILY">VERY OFTEN</button> <!-- DAILY-->
-         <button id = "q4o2" class= "q4 selector" value="ONCE A WEEK">SOMETIMES</button><!--ONCE IN A WEEK-->
-         <button id = "q4o3" class= "q4 selector" value="FEW DAYS IN A WEEK">OFTEN</button><!--MORE THAN ONCE A WEEK-->
-         <button id = "q4o4" class= "q4 selector" value="NA"> N/A </button>
+         <button id = "q4o1" class= "q4 selector" class="lf-button lf-red lf-opacity" value="DAILY">VERY OFTEN</button> <!-- DAILY-->
+         <button id = "q4o2" class= "q4 selector" class="lf-button lf-red lf-opacity" value="ONCE A WEEK">SOMETIMES</button><!--ONCE IN A WEEK-->
+         <button id = "q4o3" class= "q4 selector" class="lf-button lf-red lf-opacity" value="FEW DAYS IN A WEEK">OFTEN</button><!--MORE THAN ONCE A WEEK-->
+         <button id = "q4o4" class= "q4 selector" class="lf-button lf-red lf-opacity" value="NA"> N/A </button>
         <!--<a href="./suggestionsPage.html"><button class= "submit selector" value="submit">DONE</button>-->
          <!--end-->
       </section>
@@ -71,13 +77,11 @@
     </div>
     <!-- end Modified by neha-->
     <!--start add by neha-->
-     <button id = "leftArrow" class="left-arrow" onclick="plusDivs(-1)"><i class="fa fa-angle-double-left"></i></button>
-      <button id = "rightArrow" class="right-arrow" onclick="plusDivs(1)"><i class="fa fa-angle-double-right"></i></button>
-      <section class= "options">
+     <button id = "leftArrow" class="left-arrow"  onclick="plusDivs(-1)"><i class="fa fa-angle-double-left fa-3x"></i></button>
+      <button id = "rightArrow"  class="right-arrow" class="arrowButton" onclick="plusDivs(1)"><i class="fa fa-angle-double-right fa-3x"></i></button>
+      <!-- <section class= "options"> -->
         <a href="SuggestionsPage.html"><button id="doneButton" class= "submit selector" value="submit">DONE</button>
-      </section>
-
-  </div>
+      <!-- </section> -->
   </div>
   <!--end add by neha-->
   <!--<script src="./js/less.js" type="text/javascript"></script>-->
