--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -29,7 +29,7 @@
       <div class="compareContainer">
           <!-- left section -->
           <section class="comparison">
-              <img id="leftImg" src="../image/downtown.jpg" alt="">
+              <img id="leftImg" src="../image/fremont.jpg" alt="">
               <input id="leftInput" type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods1">
                   <option value="University District">
@@ -48,7 +48,7 @@
           </section> -->
           <!-- Right section -->
           <section class="comparison">
-              <img id='rightImg' src="../image/century.jpg" alt="">
+              <img id='rightImg' src="../image/ud.jpg" alt="">
               <input id="rightInput" type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood">
               <datalist id="neighborhoods2">
                   <option value="University District">
