Added Horizontal Bar chart for School Rating

--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -50,6 +50,7 @@
                     <section id="housePriceChartContainer" class="graphicsContainer"></section>
                 </div>
             </div>
+
             <div class="graphicsWrapper">
                 <div> <h2> Transit Score in Three Areas </h2></div> 
                 <div>
@@ -58,6 +59,11 @@
                         <div id="transportationContainer2" class="graphicItem"></div>
                         <div id="transportationContainer3" class="graphicItem"></div>                       
                     </section>
+                </div>
+            </div>
+             <div id='school' class="mobileLayout desktopLayout">
+                <div class = "graphicsWrapper">
+                <section id="schoolRatingChartContainer" class="graphicsContainer"></section>
                 </div>
             </div>
         </div>
