--- a/html/header.html
+++ b/html/header.html
@@ -15,25 +15,26 @@
             <div id="down-content" class="lf-sidebar lf-animate-right lf-black position-topright text-left">
                 <a href="javascript:void(0)" onclick="lfClose()" class="lf-button text-large lf-large lf-margin-top-large">Close &times;</a>
                 <a href="/html/slider.html" class="text-left">SUGGEST</a>
-                <a href="/html/map.html" class="text-left">FIND</a>
+                <a href="/html/NA.html" class="text-left">FIND</a>
                 <a href="/html/CompareNeighborhoods.html" class="text-left">COMPARE</a>
-
             </div>
         </div>
 
         <div id="down-content-desktop" class="rowLayout">
-           
+
             <a href="/html/CompareNeighborhoods.html" class="lf-button header-link position-right lf-margin-top-xl">
                 <i class="fa fa-balance-scale lf-hover-opacity "></i>COMPARE
             </a>
-            <a href="/html/map.html" class="lf-button header-link position-right lf-margin-top-xl">
+            <a href="/html/NA.html" class="lf-button header-link position-right lf-margin-top-xl">
                 <i class="fa fa-search lf-hover-opacity "></i>FIND
             </a>
             <a href="/html/slider.html" class="lf-button header-link position-right lf-margin-top-xl" >
                 <i class="fa fa-lightbulb-o lf-hover-opacity "></i>SUGGEST
             </a>
-            
+            <a href="/html/team.html" class="lf-button header-link position-right lf-margin-top-xl" >
+                <i class="fa fa-handshake-o lf-hover-opacity "></i>TEAM
+            </a>
+
         </div>
     </nav>
 </header>
-
