--- a/html/map.html
+++ b/html/map.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
- <!--<div id='header'></div>-->
  <header>
     <nav id="nav" class="rowLayout lf-card"  style="justify-content: space-between">
         <div><span class="text-xxxlarge lf-button">LF</span></div>
@@ -54,20 +53,22 @@
         </div>
     </nav>
 </header>
+  
+  
     <section class="mapPage">
 	<div class="mapDiv">
 	<img src="../image/map.jpg" alt="SeattleMap" usemap="#imagemap1" height="600" width="500">
     <map id="imagemap1" name="imagemap1">
-    <area shape="rect" alt="Northgate" coords="360,100,520,190" class="neighborDetail" href="neighborDetail.html?name=Northgate" />
-    <area shape="rect" alt="U-District" coords="370,230,470,280" class="neighborDetail" href="neighborDetail.html?name=University District" />
-    <area shape="rect" alt="Capitol Hill" coords="360,290,444,350" class="neighborDetail" href="neighborDetail.html?name=Capitol Hill" />
-    <area shape="rect" alt="Downtown" coords="280,350,390,380" class="neighborDetail" href="neighborDetail.html?name=Downtown" />
-    <area shape="rect" alt="South Lake Union" coords="300,320,340,350" class="neighborDetail" href="neighborDetail.html?name=South Lake Union" />
-    <area shape="rect" alt="Queen Anne" coords="200,290,280,330" class="neighborDetail" href="neighborDetail.html?name=Queen Anne" />
-    <area shape="rect" alt="Fremont" coords="215,240,365,270" class="neighborDetail" href="neighborDetail.html?name=Fremont" />
-    <area shape="rect" alt="Green Lake" coords="270,190,370,235" class="neighborDetail" href="neighborDetail.html?name=Green Lake" />
-    <area shape="rect" alt="Ballard" coords="95,180,270,230" class="neighborDetail" href="neighborDetail.html?name=Ballard" />
-    <area shape="rect" alt="Alki" coords="110,420,180,590" class="neighborDetail" href="neighborDetail.html?name=Alki" />
+    <area class="heart" shape="rect" alt="Northgate" coords="360,100,520,190" class="neighborDetail" href="neighborDetail.html?name=Northgate" />
+    <area class="heart" shape="rect" alt="U-District" coords="370,230,470,280" class="neighborDetail" href="neighborDetail.html?name=University District" />
+    <area class="heart" shape="rect" alt="Capitol Hill" coords="360,290,444,350" class="neighborDetail" href="neighborDetail.html?name=Capitol Hill" />
+    <area class="heart" shape="rect" alt="Downtown" coords="280,350,390,380" class="neighborDetail" href="neighborDetail.html?name=Downtown" />
+    <area class="heart" shape="rect" alt="South Lake Union" coords="300,320,340,350" class="neighborDetail" href="neighborDetail.html?name=South Lake Union" />
+    <area class="heart" shape="rect" alt="Queen Anne" coords="200,290,280,330" class="neighborDetail" href="neighborDetail.html?name=Queen Anne" />
+    <area class="heart" shape="rect" alt="Fremont" coords="215,240,365,270" class="neighborDetail" href="neighborDetail.html?name=Fremont" />
+    <area class="heart" shape="rect" alt="Green Lake" coords="270,190,370,235" class="neighborDetail" href="neighborDetail.html?name=Green Lake" />
+    <area class="heart" shape="rect" alt="Ballard" coords="95,180,270,230" class="neighborDetail" href="neighborDetail.html?name=Ballard" />
+    <area class="heart" shape="rect" alt="Alki" coords="110,420,180,590" class="neighborDetail" href="neighborDetail.html?name=Alki" />
     </map>
     </div>
     
@@ -88,16 +89,17 @@
     </div>
 
     <div class="mapTextDivRight2">
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">North Beach</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">Olympic Hills</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">Central Seattle</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">Magnolia</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">Beacon Hill</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">Georgetown</a></h3>
-    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=South Lake Union">Rainier Valley</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">North Beach</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Olympic Hills</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Central Seattle</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Magnolia</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Beacon Hill</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Georgetown</a></h3>
+    <h3 class="mapText"><a class="neighborDetail" href="neighborDetail.html?name=Downtown">Rainier Valley</a></h3>
     </div>
     </section>
 <!-- map section ended by Amanda -->
+
 <!--<div id='footer'><div>-->
 <footer class="lf-card">
     <div class="rowLayout" style="justify-content: space-between">
