--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="lf-card-2">
             <img src="./image/downtown.jpg" alt="Card image cap"/>
             <div class="lf-card-block">
-                <h4 class="lf-card-title">Already know the neighborhood you like?</h4>
+                <h4 class="lf-card-title">Already know the neighborhood you like?</h4><br/>
                 <p class="lf-card-text">That's awesome! Let us help you explore more on your choice of neighborhood.</p><br/>
                 <div><a href="../html/map.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
@@ -62,7 +62,7 @@
         <div class="lf-card-2">
             <img src="./image/southLake.jpg" alt="Card image cap"/>
             <div class="lf-card-block">
-                <h4 class="lf-card-title">Would like to compare neighborhoods?</h4>
+                <h4 class="lf-card-title">Would like to compare neighborhoods?</h4><br/>
                 <p class="lf-card-text">Confused which one to choose. Compare with respect to each criteria and make the right choice.</p><br/>
                 <div><a href="../html/CompareNeighborhoods.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
