--- a/html/slider.html
+++ b/html/slider.html
@@ -6,7 +6,7 @@
     <title>Questionaire</title>
 
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./css/html-semantics.css" />
+    <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
 
