--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="text-xxxlarge">Find Your Dream Neighborhood</span>
             <br/>
             <span class="text-large">We care what matters to you</span>
-            <p><a href="../html/slider.html" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
+            <p><a href="/html/slider.html" class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large">GET STARTED</a></p>
         </div>
     </div>
 
@@ -46,7 +46,7 @@
             <div class="lf-card-block">
                 <h4 class="lf-card-title">New to Seattle!</h4><br/>
                 <p class="lf-card-text">Welcome to Evergreen State. We would love to suggest top 3 areas which is best fit for you. </p><br/>
-                <div><a href="../html/slider.html" class="lf-button lf-red lf-opacity">START</a></div>
+                <div><a href="/html/slider.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
         </div>
 
@@ -55,7 +55,7 @@
             <div class="lf-card-block">
                 <h4 class="lf-card-title">Already know the neighborhood you like?</h4><br/>
                 <p class="lf-card-text">That's awesome! Let us help you explore more on your choice of neighborhood.</p><br/>
-                <div><a href="../html/map.html" class="lf-button lf-red lf-opacity">START</a></div>
+                <div><a href="/html/map.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
         </div>
 
@@ -64,7 +64,7 @@
             <div class="lf-card-block">
                 <h4 class="lf-card-title">Would like to compare neighborhoods?</h4><br/>
                 <p class="lf-card-text">Confused which one to choose. Compare with respect to each criteria and make the right choice.</p><br/>
-                <div><a href="../html/CompareNeighborhoods.html" class="lf-button lf-red lf-opacity">START</a></div>
+                <div><a href="/html/CompareNeighborhoods.html" class="lf-button lf-red lf-opacity">START</a></div>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
     <div id='search'></div>
 
     <div id='footer'></div>
-   <script type="text/javascript" src="./js/index.js"></script>
+  
    <script type="text/javascript" src="./js/findNeighbor.js"></script>
 </body>
 
