--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -78,6 +78,9 @@
                         </div>
 
                     </div>
+                    <div class="graphicsWrapper lf-card-2" style="visibility: hidden">
+
+                    </div>
                 </div>
 
             </div>
