--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -17,10 +17,11 @@
     <!-- my custom css file -->
       <link rel="stylesheet" type="text/css" href="../css/compareNeighborhoods.css">
       <!-- <script src="js/less.js" type="text/javascript"></script> -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
       <script type="text/javascript" src="../js/compareNeighborhood.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
       <!-- Header Footer Load Script -->
       <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
+      <script type="text/javascript" src="../js/criterion.js"></script>
   </head>
   <body>
   <div id='header'></div>
@@ -34,12 +35,12 @@
               <datalist id="neighborhoods1">
                   <option value="University District">
                   <option value="Queen Anne">
-                  <option value="South lake Union">
+                  <option value="South Lake Union">
                   <option value="Ballard">
                   <option value="Fremont">
                   <option value="Downtown">
                   <option value="Capitol Hill">
-                  <option value="NorthGate">
+                  <option value="Northgate">
                   <option value="Alki">
               </datalist>
           </section>
@@ -53,7 +54,7 @@
               <datalist id="neighborhoods2">
                   <option value="University District">
                   <option value="Queen Anne">
-                  <option value="South lake Union">
+                  <option value="South Lake Union">
                   <option value="Ballard">
                   <option value="Fremont">
                   <option value="Downtown">
@@ -64,11 +65,12 @@
           </section>
       </div>
       <div class="text-center">
-        <a href=""><button class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large lf-margin-top">Compare</button></a>
+        <button class="lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large lf-margin-top" onclick="setValues()">Compare</button>
       </div>
 
   </div>
   <div id='footer'></div>
+   <script src="../js/setter.js" type="text/javascript"></script>
   </body>
 </html>
 <!--end by sirisha-->
