--- a/html/DetailedComparePage.html
+++ b/html/DetailedComparePage.html
@@ -96,7 +96,7 @@
 
     </div> <!-- mainDiv close -->
     <div id = "buttonDiv">
-   <a href="findNeighbor.html"> <button id = "findMoreAreas" class = "lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large lf-margin-top"> FIND MORE</button></a>
+   <a href="map.html"> <button id = "findMoreAreas" class = "lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large lf-margin-top"> FIND MORE</button></a>
     <a href="CompareNeighborhoods.html"><button id = "compareOtherAreas" class = "lf-button lf-red lf-opacity lf-padding-large lf-margin-top lf-large lf-margin-top">COMPARE OTHERS</button></a>
     </div><!--button div close-->
     <div id='footer'></div>
