--- a/html/header.html
+++ b/html/header.html
@@ -17,6 +17,7 @@
                 <a href="/html/slider.html" class="text-left">SUGGEST</a>
                 <a href="/html/map.html" class="text-left">FIND</a>
                 <a href="/html/CompareNeighborhoods.html" class="text-left">COMPARE</a>
+                <a href="/html/team.html" class="text-left"> TEAM </a>
             </div>
         </div>
 
